--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,22 +20,22 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: contact@weecology.org
+phone: 352-846-0643
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
+  street: Building 150, University of Florida,
+  city: Gainesville
+  region: FL
+  postcode: '32611'
   country: United States
   country_code: US
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
+  latitude: '29.645802'
+  longitude: '-82.34576'
+# directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+# office_hours:
+#   - 'Monday 10:00 to 13:00'
+#   - 'Wednesday 09:00 to 10:00'
 appointment_url: 'https://calendly.com'
 contact_links:
 #  - icon: comments
@@ -117,7 +117,7 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
+  google_analytics: 'UA-2320026-3'
   google_tag_manager: ''
   google_site_verification: ''
   baidu_site_verification: ''
