--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -36,7 +36,7 @@ coordinates:
 # office_hours:
 #   - 'Monday 10:00 to 13:00'
 #   - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+# appointment_url: 'https://calendly.com'
 contact_links:
 #  - icon: comments
 #    icon_pack: fas
