--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -53,6 +53,7 @@ main_menu:
   show_day_night: true
   show_search: true
   highlight_active_link: false
+  logo: "assets/media/img/weecology_logo.png"
 
 # Localization
 
