--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,27 +4,18 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: home
-    url: about
+  - name: Home
+    url:
     weight: 10
-  - name: News
-    url: post
+  - name: Projects
+    url: projects
     weight: 20
   - name: People
     url: people
     weight: 30
-  - name: Events
-    url: event
-    weight: 40
   - name: Publications
     url: publication
     weight: 50
   - name: Contact
     url: contact
     weight: 60
-  - name: home
-    url: about
-    weight: 60
-  - name: Projects
-    url: projects
-    weight: 70
